--- a/css/style.css
+++ b/css/style.css
@@ -292,6 +292,59 @@
           box-sizing: border-box;
 }
 
+/*================POSTULACIONES=====================*/
+/*BANNER*/
+.banner {
+  width: 100%;
+  height: 700px;
+  position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.banner .action .action__element {
+  font-weight: 600;
+}
+
+.banner .action .action__element1 {
+  font-weight: 400;
+}
+
+.banner .action .action__element--modifier {
+  font-weight: 500;
+}
+
+.banner .action .action__element--modifier:hover {
+  color: #000000;
+  background-color: #CEE137;
+}
+
+/*tarjeta de enlace*/
+.boton .boton__element {
+  background-color: #567192;
+}
+
+.boton .boton__element--modifier {
+  background-color: #ce0dce;
+}
+
+/*==================visas====================*/
+.card-visa {
+  background-color: #fdfbfb;
+  font-size: 30px;
+}
+
+.card-visa .card-visa__element {
+  text-align: center;
+  font-size: 18px;
+}
+
+.card-visa .card-visa__element--modifier {
+  list-style-type: none;
+  text-align: center;
+  font-size: 18px;
+}
+
 /*=========secciones===========*/
 .card {
   width: 100%;
