--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -11,7 +11,7 @@ $color8:#fdfbfb;
 $colorvioleta:rgb(206, 13, 206);
 
 /*fondo*/
-$imagenfondo: url(/assets/banner.png);
+$imagenfondo: url(/assets/FONDO.jpg);
 $fondo1:#eeecec;
 $fondo2:#f0efef;
 
