--- a/scss/style.scss
+++ b/scss/style.scss
@@ -182,9 +182,9 @@ body{
 }
 
 
-/*==========================RESPONSIVE==============================*/
+/*==========================RESPONSIVE==============================
 
-@media (min-width: 320px) and (max-width:479px){
+@media (min-width: 320px) and (max-width:478.98px){
     
     .cardPrincipal{
         .cardPrincipal__element{
@@ -195,6 +195,71 @@ body{
         }
         .cardPrincipal__element--modifier1{
             font-size: 18px;
+        }
+    }
+    
+    .cardTerceraImagen{
+        .cardTerceraImagen__element{
+            width: 90%;
+            height: auto;
+        }
+    }
+
+    .card.Tercera{
+        .cardTercera__element{
+            font-size: 20px;
+        }
+        .cardTercera__element--modifier{
+            font-size: 18px;
+        }
+        .card.Tercera__element--modifier1{
+            font-size: 18px;
+        }
+    }
+
+
+    .cardSegunda1{
+        width: 100%;
+        .cardSegunda1__element{
+            font-size: 20px;
+        }
+        .cardSegunda1__element--modifier{
+            font-size: 18px;
+        }
+        .cardSegunda1__element--modifier1{
+            font-size: 18px;
+            word-spacing: normal;
+        }
+    }
+
+
+
+    .imagen{
+        width: 100%;
+        .imagen__final{
+            width: 100%;
+            height: auto;
+        }
+    }
+
+}
+
+@media (min-width:480px) and (max-width:575.98px){
+    .cardPrincipal{
+        .cardPrincipal__element{
+            font-size: 20px;
+        }
+        .cardPrincipal__element--modifier{
+            font-size: 18px;
+        }
+        .cardPrincipal__element--modifier1{
+            font-size: 18px;
+        }
+    }
+    
+    .cardTerceraImagen{
+        .cardTerceraImagen__element{
+            width: 90%;
         }
     }
 
@@ -227,27 +292,74 @@ body{
     }
 
 
-
     .imagen{
+        width: 100%;
         .imagen__final{
             width: 100%;
             height: auto;
         }
     }
-
 }
 
-@media (min-width:480px) and (max-width:639px){
+@media (min-width:576px) and (max-width:767.98px){
+
+
+.cardPrincipal1{
+}    
+    .cardPrincipal{
+        .cardPrincipal__element{
+            font-size: 20px;
+        }
+        .cardPrincipal__element--modifier{
+            font-size: 18px;
+        }
+        .cardPrincipal__element--modifier1{
+            font-size: 18px;
+        }
+    }
     
+    .cardTerceraImagen{
+        .cardTerceraImagen__element{
+            width: 90%;
+            height: auto;
+        }
+    }
+
+    .card.Tercera{
+        .cardTercera__element{
+            font-size: 20px;
+        }
+        .cardTercera__element--modifier{
+            font-size: 18px;
+        }
+        .card.Tercera__element--modifier1{
+            font-size: 18px;
+        }
+    }
 
 
+    .cardSegunda1{
+        width: 100%;
+        .cardSegunda1__element{
+            font-size: 20px;
+        }
+        .cardSegunda1__element--modifier{
+            font-size: 18px;
+        }
+        .cardSegunda1__element--modifier1{
+            font-size: 18px;
+            word-spacing: normal;
+        }
+    }
 
 
 
     .imagen{
+        width: 100%;
         .imagen__final{
             width: 100%;
             height: auto;
         }
     }
+
 }
