--- a/css/style.css
+++ b/css/style.css
@@ -313,7 +313,7 @@
 /*BANNER*/
 .banner {
   width: 100%;
-  height: 700px;
+  height: 80vh;
   position: relative;
   background-size: cover;
   background-repeat: no-repeat;
