--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -170,7 +170,7 @@
 /*BANNER*/
 .banner{
     width: 100%;
-    height: 700px;
+    height: 80vh;
     position: relative;
     background-size: cover;
     background-repeat: no-repeat;
