--- a/scss/style.scss
+++ b/scss/style.scss
@@ -182,7 +182,7 @@ body{
 }
 
 
-/*==========================RESPONSIVE==============================
+/*==========================RESPONSIVE==============================*/
 
 @media (min-width: 320px) and (max-width:478.98px){
     
@@ -303,9 +303,6 @@ body{
 
 @media (min-width:576px) and (max-width:767.98px){
 
-
-.cardPrincipal1{
-}    
     .cardPrincipal{
         .cardPrincipal__element{
             font-size: 20px;
