Modificaciones responsive en novedades

--- a/scss/_novedades.scss
+++ b/scss/_novedades.scss
@@ -23,8 +23,8 @@
         width: 80%;
         height: 30vh;
     }
-    .card-text{
-        text-align: justify;
+    .card__element--modifier2{
+        text-align: center;
         display: inline-block;
     }
 }
