--- a/css/style.css
+++ b/css/style.css
@@ -399,8 +399,8 @@
   height: 30vh;
 }
 
-.card .card-text {
-  text-align: justify;
+.card .card__element--modifier2 {
+  text-align: center;
   display: inline-block;
 }
 
