--- a/css/style.css
+++ b/css/style.css
@@ -270,7 +270,7 @@
   overflow: hidden;
   margin-bottom: 20px;
   padding: 10px;
-  background: rgba(206, 225, 55, 0.15);
+  background: #CEE137;
   -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
           box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(4px);
@@ -660,6 +660,49 @@ body {
     width: 100%;
     height: auto;
   }
+  .banner {
+    width: 100%;
+    height: auto;
+    position: relative;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  .card {
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    background-color: #eeecec;
+  }
+  .card .card__element {
+    font-size: 20px;
+    font-weight: 500;
+    color: #000000;
+  }
+  .card .card__element--modifier {
+    font-size: 18px;
+    font-weight: 400;
+    color: #1d252c;
+  }
+  .card .card__element--modifier1 {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 80%;
+    height: 30vh;
+  }
+  .card .card__element--modifier2 {
+    text-align: center;
+    display: inline-block;
+  }
 }
 
 @media (min-width: 480px) and (max-width: 575.98px) {
@@ -703,6 +746,49 @@ body {
   .imagen .imagen__final {
     width: 100%;
     height: auto;
+  }
+  .banner {
+    width: 100%;
+    height: auto;
+    position: relative;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  .card {
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    background-color: #eeecec;
+  }
+  .card .card__element {
+    font-size: 20px;
+    font-weight: 500;
+    color: #000000;
+  }
+  .card .card__element--modifier {
+    font-size: 18px;
+    font-weight: 400;
+    color: #1d252c;
+  }
+  .card .card__element--modifier1 {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 80%;
+    height: 30vh;
+  }
+  .card .card__element--modifier2 {
+    text-align: center;
+    display: inline-block;
   }
 }
 
@@ -748,6 +834,141 @@ body {
   .imagen .imagen__final {
     width: 100%;
     height: auto;
+  }
+  .banner {
+    width: 100%;
+    height: auto;
+    position: relative;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  .card {
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    background-color: #eeecec;
+  }
+  .card .card__element {
+    font-size: 20px;
+    font-weight: 500;
+    color: #000000;
+  }
+  .card .card__element--modifier {
+    font-size: 18px;
+    font-weight: 400;
+    color: #1d252c;
+  }
+  .card .card__element--modifier1 {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 80%;
+    height: 30vh;
+  }
+  .card .card__element--modifier2 {
+    text-align: center;
+    display: inline-block;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .banner {
+    width: 100%;
+    height: 70vh;
+    position: relative;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  .card {
+    width: 100%;
+    height: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    background-color: #eeecec;
+  }
+  .card .card__element {
+    font-size: 20px;
+    font-weight: 500;
+    color: #000000;
+  }
+  .card .card__element--modifier {
+    font-size: 18px;
+    font-weight: 400;
+    color: #1d252c;
+  }
+  .card .card__element--modifier1 {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 80%;
+    height: 30vh;
+  }
+  .card .card__element--modifier2 {
+    text-align: center;
+    display: inline-block;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  .banner {
+    width: 100%;
+    height: auto;
+    position: relative;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  .card {
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    background-color: #eeecec;
+  }
+  .card .card__element {
+    font-size: 20px;
+    font-weight: 500;
+    color: #000000;
+  }
+  .card .card__element--modifier {
+    font-size: 18px;
+    font-weight: 400;
+    color: #1d252c;
+  }
+  .card .card__element--modifier1 {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 80%;
+    height: 30vh;
+  }
+  .card .card__element--modifier2 {
+    text-align: center;
+    display: inline-block;
   }
 }
 /*# sourceMappingURL=style.css.map */
