--- a/scss/style.scss
+++ b/scss/style.scss
@@ -241,6 +241,42 @@ body{
             height: auto;
         }
     }
+    
+    .banner{
+        width: 100%;
+        height: auto;
+        position: relative;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    .card{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        background-color: $fondo1;
+        .card__element{
+            font-size: 20px;
+            font-weight: 500;
+            color: $color2;
+        }
+        .card__element--modifier{
+            font-size: 18px;
+            font-weight: 400;
+            color: $color4;
+            
+        }
+        .card__element--modifier1{
+            justify-content: center;
+            width: 80%;
+            height: 30vh;
+        }
+        .card__element--modifier2{
+            text-align: center;
+            display: inline-block;
+        }
+    }
 
 }
 
@@ -299,7 +335,46 @@ body{
             height: auto;
         }
     }
+
+    .banner{
+        width: 100%;
+        height: auto;
+        position: relative;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    .card{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        background-color: $fondo1;
+        .card__element{
+            font-size: 20px;
+            font-weight: 500;
+            color: $color2;
+        }
+        .card__element--modifier{
+            font-size: 18px;
+            font-weight: 400;
+            color: $color4;
+            
+        }
+        .card__element--modifier1{
+            justify-content: center;
+            width: 80%;
+            height: 30vh;
+        }
+        .card__element--modifier2{
+            text-align: center;
+            display: inline-block;
+        }
+    }
 }
+
+
+
 
 @media (min-width:576px) and (max-width:767.98px){
 
@@ -358,5 +433,117 @@ body{
             height: auto;
         }
     }
+    .banner{
+        width: 100%;
+        height: auto;
+        position: relative;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
 
+    .card{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        background-color: $fondo1;
+        .card__element{
+            font-size: 20px;
+            font-weight: 500;
+            color: $color2;
+        }
+        .card__element--modifier{
+            font-size: 18px;
+            font-weight: 400;
+            color: $color4;
+            
+        }
+        .card__element--modifier1{
+            justify-content: center;
+            width: 80%;
+            height: 30vh;
+        }
+        .card__element--modifier2{
+            text-align: center;
+            display: inline-block;
+        }
+    }
+
+}
+
+@media (min-width:768px) and (max-width:991.98px){
+    .banner{
+        width: 100%;
+        height: 70vh;
+        position: relative;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    .card{
+        width: 100%;
+        height: auto;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        background-color: $fondo1;
+        .card__element{
+            font-size: 20px;
+            font-weight: 500;
+            color: $color2;
+        }
+        .card__element--modifier{
+            font-size: 18px;
+            font-weight: 400;
+            color: $color4;
+            
+        }
+        .card__element--modifier1{
+            justify-content: center;
+            width: 80%;
+            height: 30vh;
+        }
+        .card__element--modifier2{
+            text-align: center;
+            display: inline-block;
+        }
+    }
+}
+
+@media (min-width:992px) and (max-width:1199.98px){
+    .banner{
+        width: 100%;
+        height: auto;
+        position: relative;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    .card{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        background-color: $fondo1;
+        .card__element{
+            font-size: 20px;
+            font-weight: 500;
+            color: $color2;
+        }
+        .card__element--modifier{
+            font-size: 18px;
+            font-weight: 400;
+            color: $color4;
+            
+        }
+        .card__element--modifier1{
+            justify-content: center;
+            width: 80%;
+            height: 30vh;
+        }
+        .card__element--modifier2{
+            text-align: center;
+            display: inline-block;
+        }
+    }
 }
